test/libsolidity/syntaxTests/comments/multiline_unicode_direction_override_3.sol
contract C {
    function f() public pure
    {
        // push 1
        /*overflow ‮*/
    }
}
// ----
// ParserError 8936: (74-89): Mismatching directional override markers in comment.
